test/src/e2e_vm_tests/test_programs/should_fail/repeated_const_two_libs/src/main.sw
script;

dep lib1;
dep lib2;

use lib1::X;
use lib2::X;

fn main() -> u64 {
    X
}
